@@ -1,33 +1,42 @@
 #' Cladistic Data for Dicranograptid Graptolites from Song and Zhang (2014)
 #'
-#' Character matrix and majority-rule cladogram for 12 dicranograptid
+#' Character matrix and two cladograms for 13 dicranograptid
 #' (and outgroup) graptoloids, taken from Song and Zhang (2014). Included
 #' here for use with functions related to character change.
 
 #' @name SongZhangDicrano
 #' @rdname SongZhangDicrano
-#' @aliases charMatDicrano cladogramDicrano
+#' @aliases charMatDicrano cladogramDicranoX12 cladogramDicranoX12
 
 #' @details
-#' This example dataset is composed of a small cladistic character data for 12 taxa and 24 characters,
+#' This example dataset is composed of a small cladistic character data for 13 taxa and 24 characters,
 #' taken from Song and Zhang (2014). Note that character 22 is a biostratigraphic character, which was
 #' not included in all analyses by Song and Zhang.
 #'
-#' The included cladogram is the majority-rule consensus of a maximum-parsimony analysis on 12 taxa with
-#' 24 characters, including a biostratigraphic character. This tree is included (among the four depicted)
-#' as it appeared to be the basis for the majority of Song and Zhang's discussion of dicranograptid
-#' systematics.
+#' The first included cladogram \code{cladogramDicranoX12} is the
+#' majority-rule consensus of a maximum-parsimony analysis on 12
+#' taxa (excluding on taxa with incompletely known anatomy) with
+#' 24 characters, including a biostratigraphic character. This
+#' tree is included here as, among the four trees depicted,
+#' it appeared to be the basis for the majority of Song and
+#' Zhang's discussion of dicranograptid systematics.
+#' 
+#' The second cladogram \code{cladogramDicranoX13} is a maximum-parsimony tree found by a maximum-parsimony
+#' analysis of 13 taxa with 24 characters, including a biostratigraphic character. This tree is much more resolved
+#' than the alternative majority-rule cladogram for 12 taxa.
 #'
-#' Both the matrix and the tree were entered by hand from their flat graphic depiction in Song and Zhang's
+#' The matrix and both trees were entered by hand from their flat graphic depiction in Song and Zhang's
 #' manuscript.
 
 #' @format 
 #' Loading this dataset adds two objects to the R environment.
 #' \code{charMatDicrano} is a \code{data.frame} object composed of multiple factors, with \code{NA} values
 #' representing missing values (states coded as '?'), read in with \code{readNexus} from package
-#' \code{phylobase}. \code{cladogramDicrano} is a cladogram, formatted as a \code{phylo} class object
-#' for use with package \code{ape}, without branch-lengths (as this was a consensus tree from a
-#' maximum-parsimony analysis).
+#' \code{phylobase}. \code{cladogramDicranoX12} and 
+#' \code{cladogramDicranoX13} are both cladograms, formatted as \code{phylo} class objects
+#' for use with package \code{ape}, without branch-lengths (as
+#' these was are, respectively, consensus tree and a maximum-parsimony tree from seperate
+#' maximum-parsimony analyses).
 
 #' @source 
 #' Song, Y., and Y. Zhang. 2014. A preliminary study on the relationship of the
@@ -83,9 +92,13 @@
 #' 
 #' #######
 #'
-#' # plot majority rule tree from Song and Zhang
-#' plot(cladogramDicrano,
+#' # plot 12 taxon majority rule tree from Song and Zhang
+#' plot(cladogramDicranoX12,
 #'	main="MajRule_24charX12Taxa_wBiostratChar")
+#' 
+#' # plot 13 taxon MPT
+#' plot(cladogramDicranoX13,
+#'	main="MPT_24charX13Taxa_wBiostratChar")
 #'
 #' ##############
 #'
@@ -96,8 +109,9 @@
 #' 
 #' charMatDicrano<-readNexus(file.choose(),type="data",SYMBOLS = " 0 1 2")
 #' 
-#' cladogramDicrano<-read.nexus(file.choose())
+#' cladogramDicranoX12<-read.nexus(file.choose())
+#' cladogramDicranoX13<-read.nexus(file.choose())
 #' 
-#' save(charMatDicrano,cladogramDicrano,file="SongZhangDicrano.rdata")
+#' save(charMatDicrano,cladogramDicranoX12,file="SongZhangDicrano.rdata")
 #' }
 NULL
